fixed spacing and padding issues

--- a/FrontEnd/src/UserCreatedMemes.css
+++ b/FrontEnd/src/UserCreatedMemes.css
@@ -2,25 +2,12 @@
     text-align: center;
 }
 
-#userUl {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
+p{
+    font-weight: 700;
 }
 
-#userUl li {
-    list-style: none;
-}
-
-#userMemeContainer {
-    display: flex;
-    flex-direction: row;    
-    background-color: rgba(243, 242, 242)
-  );
-    
-}
-
-#userMemeContainer img{
+#userCreatedMemes img {
+    border: 5px solid rgba(0, 0, 0, 0.459);
     height: 100px;
     width: 150px;
 }
@@ -28,4 +15,11 @@
 #userMemes{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    padding: 2em;
+    padding-inline-start: 0;
+}
+
+li{
+    list-style: none;
 }
